--- a/h/static/styles/partials-v2/_nav-bar.scss
+++ b/h/static/styles/partials-v2/_nav-bar.scss
@@ -92,12 +92,9 @@
 @media screen and (max-width: $tablet-width) {
   // Reduce horizontal margins on smaller screens to provide more space for
   // search bar
-  .nav-bar__logo {
-    margin-left: 10px;
-  }
-
-  .nav-bar-links {
-    margin-right: 10px;
+  .nav-bar__content {
+    margin-left: $search-result-container-margin-left-on-small-screens;
+    margin-right: $search-result-container-margin-right-on-small-screens;
   }
 }
 
